[tool.poetry]
name = "4-test-project-for-class-10-2-pytest"
version = "0.1.0"
description = ""
authors = ["Maksim Lakovich <maks.lakovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
